k8s/apps/minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
