k8s/apps/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: gxp-platform
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio
        app.kubernetes.io/part-of: gxp-platform
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        node-role: storage
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: minio
          image: quay.io/minio/minio@sha256:cf3dadcfa1fb0324f43958bad1abba986d53c4ecc04d4d50b46c7dcda28bd3cd
          imagePullPolicy: IfNotPresent
          args:
            - server
            - /data
            - --console-address
            - :9001
          ports:
            - name: api
              containerPort: 9000
            - name: console
              containerPort: 9001
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 750m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: data
              mountPath: /data
            - name: tmp
              mountPath: /tmp
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: api
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: api
            periodSeconds: 10
            timeoutSeconds: 10
          startupProbe:
            httpGet:
              path: /minio/health/live
              port: api
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 60
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio
        - name: tmp
          emptyDir: {}
